Fix collection path truncation

--- a/src/co/bookmarks/edit/form/collection/suggested.module.styl
+++ b/src/co/bookmarks/edit/form/collection/suggested.module.styl
@@ -38,8 +38,8 @@
     text-overflow: ellipsis
 
     span {
-        direction: ltr
-        unicode-bidi: plaintext
+        direction: ltr;
+        unicode-bidi: bidi-override;
     }
 }
 
